# remind

./: Cargo.toml  README.md
scripts/: build.sh  install.sh  systemd-install.sh  systemd-uninstall.sh
src/: app.rs  main.rs  remind_hotkey_client.rs
src/app/: app_commands.rs  app_state.rs  hotkey_server.rs  notable_watch.rs  note_window.rs  notes_meta.rs  utils.rs
