[package]
name = "remind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
druid-shell = "0.8.3"
env_logger = "0.10.0"
global-hotkey = "0.3.0"
home = "0.5.5"
html_parser = "0.7.0"
instant = "0.1.12"
lazy_static = "1.4.0"
log = "0.4.20"
markdown-parser = "0.1.2"
mouse_position = "0.1.3"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
open = "5.0.0"
piet-common = "0.6.2"
pulldown-cmark = "0.9.3"
serde = "1.0.188"
serde_json = "1.0.107"
tracing = "0.1.37"
